--- a/export.bib
+++ b/export.bib
@@ -198,7 +198,7 @@
 	howpublished={https://www.lulzbot.com/store/printers/lulzbot-taz-6}
 }
 
-@manual{Allegro:ACS722
+@manual{Allegro:ACS722,
 	organization  = "Allegro Microsystems",
 	title         = "High  Accuracy,  Galvanically  Isolated  Current  Sensor  IC",
 	number        = "ACS722",
@@ -206,7 +206,7 @@
 	note          = "Rev. 2"
 }
 
-@manual{
+@manual{AS5055,
 	organization  = Austria micro systems",
 	title         = "AS5055 Adapterboard Operation Manual",
 	number        = "AS5055",
@@ -215,7 +215,7 @@
 	note          = "Rev. 1.1"
 }
 
-@manual{
+@manual{AS5055A,
 	organization  = "austria micro systems",
 	title         = "AS5055A Low  Power  12-Bit  Magnetic  Position  Sensor",
 	number        = "AS5055A",
@@ -224,7 +224,7 @@
 	note          = "Rev. v2-06"
 }
 
-@manual{
+@manual{DRV8872,
 	organization  = "Texas Instruments",
 	title         = "DRV8872 3.6-A Brushed DC Motor Driver With Fault Reporting",
 	number        = "DRV8872",
@@ -233,7 +233,7 @@
 	note          = "Rev. SLVSCZ0C"
 }
 
-@manual{
+@manual{HIDdevice
 	organization  = "Universal Serial Bus",
 	title         = "Device  Class  Definition  for  Human  Interface  Devices  (HID) ",
 	year          =  2001,
@@ -241,7 +241,7 @@
 	note          = "Rev. 1.11"
 }
 
-@manual{
+@manual{PCBspec,
 	organization  = "Purdue University",
 	title         = "PCB Design Specifications",
 	year          =  2011,
@@ -249,7 +249,7 @@
 	note          = "Rev. 1.0"
 }
 
-@manual{
+@manual{INA332,
 	organization  = "Burr-Brown Products from Texas Instruments",
 	title         = "Low-Power,  Single-Supply,  CMOSINSTRUMENTATION  AMPLIFIERS",
 	number        = "INA332",
@@ -258,7 +258,7 @@
 	note          = "SBOS216B "
 }
 
-@manual{
+@manual{demux,
 	organization  = "Texas Instruments",
 	title         = "1-OF-2 NONINVERTING DEMULTIPLEXER WITH 3-STATE DESELECTED OUTPUT",
 	number        = "SN74LVC1G18",
@@ -267,7 +267,7 @@
 	note          = "SCES406K"
 }
 
-@manual{
+@manual{RTOS_userGuide,
 	organization  = "Texas Instruments",
 	title         = "SYS/BIOS  (TI-RTOS  Kernel) User's  Guide",
 	number        = "SYS/BIOS",
@@ -276,7 +276,7 @@
 	note          = "SPRUEX3T"
 }
 
-@manual{
+@manual{RTOS_startGuide,
 	organization  = "Texas Instruments",
 	title         = "TI-RTOS  2.16  for  TivaC Getting Started Guide",
 	number        = "TI-RTOS 2.16",
@@ -284,7 +284,7 @@
 	month		  =  2,
 	note          = "SPRUHU5D"
 }
-@manual{
+@manual{usbUserGuide,
 	organization  = "Texas Instruments",
 	title         = "TivaWare™  USB  Library User's Guide",
 	number        = "sw-tm4c-usbl-ug-2.1.3.156",
@@ -292,7 +292,7 @@
 	month		  =  7,
 	note          = "SPMU297D"
 }
-@manual{
+@manual{peripheralLibrary,
 	organization  = "Texas Instruments",
 	title         = "TivaWare™  Peripheral  Driver  Library",
 	number        = "SW-TM4C-DRL-UG-2.1.3.156",
@@ -300,14 +300,14 @@
 	month		  =  7,
 	note          = "SPMU298D"
 }
-@manual{
+@manual{TivaDataSheet,
 	organization  = "Texas Instruments",
 	title         = "Tiva™ TM4C123GH6PM  Microcontroller Data Sheet",
 	number        = "TM4C123GH6PM",
 	year          =  2014,
 	note          = "SPMS376E"
 }
-@manual{
+@manual{launchPadDataSheet,
 	organization  = "Texas Instruments",
 	title         = "Tiva™ C Series TM4C123G LaunchPad Evaluation Board User's Guide",
 	number        = "TM4C123G",
